Setup initial files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<button onclick="game()">Play a best of 5</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="odin-rps.js" defer></script>
+</head>
+<body>
+  <button>Play a best of 5</button>
+</body>
+</html>
+
