Create basic UI with RPS buttons and score display

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <script src="odin-rps.js" defer></script>
 </head>
 <body>
-  <button>Play a best of 5</button>
+
+  <button class="choiceButton" id="button1">Rock</button>
+  <button class="choiceButton" id="button2">Paper</button>
+  <button class="choiceButton" id="button3">Scissors</button>
+
+  <div id="result"></div>
 </body>
 </html>
 
